[package]
name = "khamoshchat-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS DynamoDB
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Crypto / Signal
base64 = "0.22"
rand = "0.8"
libsignal-dezire = { git = "https://github.com/debarkamondal/libsignal-dezire" }

# HTTP client (Google OAuth token exchange)
reqwest = { version = "0.12", features = ["json"] }

# Misc
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
dotenvy = "0.15"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
